--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/thomas-crane/tbar/issues"
   },
-  "homepage": "https://github.com/thomas-crane/tbar#readme"
+  "homepage": "https://github.com/thomas-crane/tbar#readme",
+  "devDependencies": {
+    "@types/node": "^14.0.13",
+    "ava": "^3.9.0",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.5"
+  }
 }
