--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "description": "An i3status replacement written in TypeScript.",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "bin": {
+    "tbar": "lib/cli.js"
+  },
   "scripts": {
     "compile": "tsc -p .",
     "lint": "tslint -p .",
@@ -35,10 +39,15 @@
   },
   "homepage": "https://github.com/thomas-crane/tbar#readme",
   "devDependencies": {
+    "@types/minimist": "^1.2.0",
     "@types/node": "^14.0.13",
     "ava": "^3.9.0",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "typescript": "^3.9.5"
+  },
+  "dependencies": {
+    "minimist": "^1.2.5",
+    "tiny-typed-emitter": "^2.0.2"
   }
 }
